# maintenance-calendar

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: contracts.py  db.py  deps.py  main.py  settings.py
app/models/: __init__.py  household.py  item.py  magic_link_token.py  maintenance_task.py  user.py
app/routers/: auth.py  calendar.py  items.py  settings.py
app/services/: auth.py  calendar_query.py  email_sender.py  ics.py  items.py  research.py  supplies.py  youtube.py
app/static/: styles.css
app/templates/: base.html  index.html  settings.html
app/templates/auth/: login.html  verify_failed.html
app/templates/items/: _card.html  _list.html  _supply_row.html  _task_editor.html  _video_row.html  draft.html  edit.html  new.html
tests/: conftest.py  test_auth.py  test_auth_routes.py  test_calendar_query.py  test_calendar_routes.py  test_ics.py  test_items_routes.py  test_items_service.py  test_models.py  test_research.py  test_settings_route.py  test_smoke.py  test_supplies.py  test_youtube.py
tests/fixtures/research/: espresso_machine.json
